// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display configure analysis button for logged in user 1`] = `
<div
  className="boxed-group project-card"
  data-key="foo"
  style={
    Object {
      "height": 100,
    }
  }
>
  <div
    className="boxed-group-header clearfix"
  >
    <div
      className="project-card-header"
    >
      <h2
        className="project-card-name"
      >
        <Connect(ProjectCardOrganization)
          organization={
            Object {
              "key": "org",
              "name": "org",
            }
          }
        />
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/dashboard",
              "query": Object {
                "branch": undefined,
                "id": "foo",
              },
            }
          }
        >
          Foo
        </Link>
      </h2>
      <div
        className="project-card-header-right"
      >
        <Connect(PrivacyBadge)
          className="spacer-left"
          organization={
            Object {
              "key": "org",
              "name": "org",
            }
          }
          qualifier="TRK"
          tooltipProps={
            Object {
              "projectKey": "foo",
            }
          }
          visibility="public"
        />
      </div>
    </div>
  </div>
  <div
    className="boxed-group-inner"
  >
    <div
      className="project-card-not-analyzed"
    >
      <span
        className="note"
      >
        projects.not_analyzed
      </span>
      <Link
        className="button spacer-left"
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/dashboard",
            "query": Object {
              "branch": undefined,
              "id": "foo",
            },
          }
        }
      >
        projects.configure_analysis
      </Link>
    </div>
  </div>
</div>
`;

exports[`should display not analyzed yet 1`] = `
<div
  className="boxed-group project-card"
  data-key="foo"
  style={
    Object {
      "height": 100,
    }
  }
>
  <div
    className="boxed-group-header clearfix"
  >
    <div
      className="project-card-header"
    >
      <h2
        className="project-card-name"
      >
        <Connect(ProjectCardOrganization)
          organization={
            Object {
              "key": "org",
              "name": "org",
            }
          }
        />
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/dashboard",
              "query": Object {
                "branch": undefined,
                "id": "foo",
              },
            }
          }
        >
          Foo
        </Link>
      </h2>
      <div
        className="project-card-header-right"
      >
        <Connect(PrivacyBadge)
          className="spacer-left"
          organization={
            Object {
              "key": "org",
              "name": "org",
            }
          }
          qualifier="TRK"
          tooltipProps={
            Object {
              "projectKey": "foo",
            }
          }
          visibility="public"
        />
      </div>
    </div>
  </div>
  <div
    className="boxed-group-inner"
  >
    <div
      className="project-card-not-analyzed"
    >
      <span
        className="note"
      >
        projects.not_analyzed
      </span>
    </div>
  </div>
</div>
`;

exports[`should display the overall measures and quality gate 1`] = `
<div
  className="boxed-group project-card"
  data-key="foo"
  style={
    Object {
      "height": 100,
    }
  }
>
  <div
    className="boxed-group-header clearfix"
  >
    <div
      className="project-card-header"
    >
      <h2
        className="project-card-name"
      >
        <Connect(ProjectCardOrganization)
          organization={
            Object {
              "key": "org",
              "name": "org",
            }
          }
        />
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/dashboard",
              "query": Object {
                "branch": undefined,
                "id": "foo",
              },
            }
          }
        >
          Foo
        </Link>
      </h2>
      <ProjectCardQualityGate
        status="OK"
      />
      <div
        className="project-card-header-right"
      >
        <Connect(PrivacyBadge)
          className="spacer-left"
          organization={
            Object {
              "key": "org",
              "name": "org",
            }
          }
          qualifier="TRK"
          tooltipProps={
            Object {
              "projectKey": "foo",
            }
          }
          visibility="public"
        />
      </div>
    </div>
    <div
      className="project-card-dates note text-right"
    >
      <DateTimeFormatter
        date="2017-01-01"
      >
        <Component />
      </DateTimeFormatter>
    </div>
  </div>
  <div
    className="boxed-group-inner"
  >
    <ProjectCardOverallMeasures
      measures={
        Object {
          "alert_status": "OK",
          "new_bugs": "12",
          "reliability_rating": "1.0",
          "sqale_rating": "1.0",
        }
      }
    />
  </div>
</div>
`;
